--- a/transaction-service.properties
+++ b/transaction-service.properties
@@ -1,40 +1,25 @@
-# -----------------------------
 # Application Name
-# -----------------------------
 spring.application.name=transaction-service
 
-# -----------------------------
-# Management / Tracing (Micrometer + Zipkin)
-# -----------------------------
 management.tracing.sampling.probability=1.0
 management.tracing.enabled=true
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
-# -----------------------------
-# Database Configuration
-# -----------------------------
 spring.datasource.url=jdbc:postgresql://localhost:5432/transactiondb
 spring.datasource.username=postgres
 spring.datasource.password=1998
 
-# -----------------------------
-# JPA Configuration
-# -----------------------------
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# -----------------------------
-# Server Port
-# -----------------------------
 server.port=8081
 
-# -----------------------------
-# Eureka Discovery
-# -----------------------------
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
-# -----------------------------
-# Limit Service Base URL
-# -----------------------------
 limit-service.url=http://localhost:8082
+
+
+server.port=8888
+spring.application.name=ConfigServer
+spring.cloud.config.server.git.uri=https://github.com/Saif-12/microservices-config
