--- a/transaction-service.properties
+++ b/transaction-service.properties
@@ -20,6 +20,6 @@ eureka.instance.prefer-ip-address=true
 limit-service.url=http://localhost:8082
 
 
-server.port=8888
-spring.application.name=ConfigServer
-spring.cloud.config.server.git.uri=https://github.com/Saif-12/microservices-config
+#server.port=8888
+#spring.application.name=ConfigServer
+#spring.cloud.config.server.git.uri=https://github.com/Saif-12/microservices-config
